drkns 07.11.2017 20:28:56 +0000 - build 5092

1. 0002323: WindowMode: клик в пустом пространстве вызывает меню
   0002648: Выделение мышью для копирования консольного буфера в режиме WindowMode=true

drkns 05.11.2017 15:25:38 +0000 - build 5091

1. Более интеллектуальное обрезание приглашения командной строки (покомпонентно).

zg 04.11.2017 20:22:28 +0200 - build 5090

1. откат 5082.

2. последняя FCTL_SETUSERSCREEN всегда закрывает Desktop.

shmuel 03.11.2017 16:34:19 +0200 - build 5089

1. Уточнение 5088.

shmuel 03.11.2017 16:12:16 +0200 - build 5088

1. Уточнение 4575 для плагиновых панелей.

zg 03.11.2017 13:24:25 +0200 - build 5087

1. всевозможные сочетания ctrl, alt и shift не прерывают выделение в редакторе и не закрывают быстрый поиск в панелях.

drkns 01.11.2017 22:08:24 +0000 - build 5086

1. Из настроек формата имени пользователя в инфопанели убран лишний пункт.

2. English translation in Help.

drkns 01.11.2017 17:34:28 +0000 - build 5085

1. В некоторых случаях могли игнорироваться инструкции в начале языковых файлов.

drkns 31.10.2017 18:35:11 +0000 - build 5084

1. "lua:panel.GetUserScreen(), потом f10 и выход - падает".

w17 31.10.2017 20:58:37 +0300 - build 5083

1. Настройка Panel.ShowBytes будет видна плагинам.

zg 30.10.2017 18:50:05 +0200 - build 5082

1. плагиновые префиксы обрабатываются вне контекста запускателя.

drkns 29.10.2017 19:39:55 +0000 - build 5081

1. Ошибка в обработке параметра "%z" функции date() - DST bias учитывался всегда, а не когда надо.

drkns 29.10.2017 15:39:04 +0000 - build 5080

1. Рефакторинг.

drkns 28.10.2017 12:18:36 +0100 - build 5079

1. Рефакторинг - переименования & переносы.

svs 27.10.2017 21:18:41 +0300 - build 5078

1. SQLite 3.21.0

drkns 26.10.2017 23:03:02 +0100 - build 5077

1. Уточнение 5076.2 - синхронизация кеширования.

drkns 26.10.2017 20:06:28 +0100 - build 5076

1. С форума: падение на операции удаления с повышением прав.

2. Кеширование результатов LookupPrivilegeValue.
