@@ -2681,7 +2681,7 @@ $ #Настройка интерфейса#
 
   #Дополнительная информация для заголовка окна#
   Дополнительная информация, выводимая в заголовке окна консоли.
-Может содержать любой текст, включая следующие переменные:
+Может содержать любой текст, включая переменные окружения (например "%USERDOMAIN%\%USERNAME%") и следующие специальные переменные:
   - #%Ver# - версия Far;
   - #%Build# - номер сборки Far;
   - #%Platform# - архитектура Far;
